gobmkida/c1/pattern_2_string
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1568:25: error: unknown type name 'pattern_0'
void  pattern_2_string( pattern_0 *pat, struct patval_b *elements, char *str, int trans, int ci, int cj) 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1574:1: error: use of undeclared identifier 'pattern_0'
pattern_0 *v11; // rax 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1574:12: error: use of undeclared identifier 'v11'; did you mean 'v10'?
pattern_0 *v11; // rax 
           ^~~
           v10
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1573:9: note: 'v10' declared here
__int64 v10; // rcx 
        ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1594:1: error: use of undeclared identifier 'pattern_0'
pattern_0 *v31; // rsi 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1594:12: error: use of undeclared identifier 'v31'
pattern_0 *v31; // rsi 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1622:1: error: use of undeclared identifier 'pattern_0'
pattern_0 *v59; // [rsp+0h] [rbp-1C18h] 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1622:12: error: use of undeclared identifier 'v59'
pattern_0 *v59; // [rsp+0h] [rbp-1C18h] 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1637:1: error: use of undeclared identifier 'v59'
v59 = pat; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1662:1: error: use of undeclared identifier 'v11'
v11 = v59; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1662:7: error: use of undeclared identifier 'v59'
v11 = v59; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1663:23: error: use of undeclared identifier 'v59'
mini = ( unsigned int)v59->mini; 
                      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1664:17: error: use of undeclared identifier 'v59'
v12 = v7 + 43 + v59->maxi; 
                ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1669:32: error: use of undeclared identifier 'v59'
minj = ( char *)( unsigned int)v59->minj; 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1670:8: error: use of undeclared identifier 'v59'
maxi = v59->maxi; 
       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1671:13: error: use of undeclared identifier 'v59'
v15 = v61 + v59->maxj + 43; 
            ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1679:35: error: use of undeclared identifier 'v59'
memset( v16, 63, ( unsigned int)( v59->maxj - ( _DWORD)v62) + 1LL); 
                                  ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1685:1: error: use of undeclared identifier 'v11'
v11 = v59; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1685:7: error: use of undeclared identifier 'v59'
v11 = v59; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1687:20: error: use of undeclared identifier 'v11'
edge_constraints = v11->edge_constraints; 
                   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1703:8: error: use of undeclared identifier 'v59'
maxj = v59->maxj; 
       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1722:7: error: use of undeclared identifier 'v59'
v29 = v59->minj; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1728:50: error: use of undeclared identifier 'v59'
memset( v9, 124, ( unsigned int)( ( _DWORD)v62 + v59->minj) + 1LL); 
                                                 ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1736:7: error: use of undeclared identifier 'v59'
v40 = v59->minj; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1742:47: error: use of undeclared identifier 'v59'
memset( v41, 124, ( unsigned int)( v61 + 41 + v59->minj) + 1LL); 
                                              ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1765:1: error: use of undeclared identifier 'v31'
v31 = v59; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1765:7: error: use of undeclared identifier 'v59'
v31 = v59; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1766:6: error: use of undeclared identifier 'v59'
if ( v59->patlen ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1784:16: error: use of undeclared identifier 'v31'
while ( v33 != v31->patlen ); 
               ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1801:1: error: use of undeclared identifier 'v31'
v31 = v59; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1801:7: error: use of undeclared identifier 'v59'
v31 = v59; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1803:17: error: use of undeclared identifier 'v31'
LODWORD( v62) = v31->patlen; 
                ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1804:17: error: use of undeclared identifier 'v31'
LODWORD( v61) = v31->edge_constraints; 
                ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1818:13: error: use of undeclared identifier 'v31'
if ( v52 != v31->maxi ) 
            ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1821:13: error: use of undeclared identifier 'v31'
if ( v52 != v31->mini ) 
            ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1824:13: error: use of undeclared identifier 'v31'
if ( v51 != v31->maxj ) 
            ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1827:13: error: use of undeclared identifier 'v31'
if ( v51 != v31->minj ) 
            ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1849:1: error: use of undeclared identifier 'v31'
v31 = v59; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1849:7: error: use of undeclared identifier 'v59'
v31 = v59; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1850:13: error: use of undeclared identifier 'v59'
if ( v52 <= v59->maxi ) 
            ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1853:13: error: use of undeclared identifier 'v59'
if ( v52 >= v59->mini ) 
            ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1856:13: error: use of undeclared identifier 'v59'
if ( v51 <= v59->maxj ) 
            ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1859:13: error: use of undeclared identifier 'v59'
if ( v51 >= v59->minj ) 
            ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1865:7: error: use of undeclared identifier 'v59'
v31 = v59; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/patterns/dfa.c:1865:1: error: use of undeclared identifier 'v31'
v31 = v59; 
^
44 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/pattern_2_string/src/obj/3/dfa.o] Error 1
